Cleaned formatting, added flex spacing, adjusted navbar, added footer, fixed Projects Page spacing

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,21 @@
-/* ----- Defaults ----- */
-html, body {
-  scroll-behavior: smooth;
+/* ==== NAVBAR ==== */
+
+.nav-item{
+  font-size: 20px;
 }
 
+/* ==== FOOTER ==== */
+
+#footer{
+  bottom: 0px;
+  padding: 20px;
+  margin-bottom: 0px;
+  margin-top: 50px;
+}
+
+/* ==== BIOGRAPHIES ==== */
+
+/* GALLERY */
 .gallery {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -10,7 +23,7 @@ html, body {
   grid-gap: 15px;
 }
 
-/* First the Grid */
+/* GRID */
 .gallery-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -20,7 +33,7 @@ html, body {
   padding: 0;
 }
 
-/* The Picture Frame */
+/* PICTURE FRAMES */
 .gallery-frame {
   padding: .5rem;
   font-size: 1.2rem;
@@ -29,25 +42,40 @@ html, body {
   color: #d9d9d9;
 }
 
-/* The Images */
+/* IMAGES */
 .gallery-img {
   max-width: 100%;
   height: auto;
   object-fit: cover;
   transition: opacity 0.25s ease-in-out;
 }
-
 .gallery-img:hover {
   opacity: .7;
 }
 
+/* ==== MEMORIES ==== */
+
+/* CAROUSEL */
 .carousel {
   width:640px;
   height:360px;
   margin: auto
 }
 
-.upsilon_photo {
+/* ==== HOMEPAGE ==== */
+
+.home_content{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.main_buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+/* .upsilon_photo {
   padding-top: 10px;
   padding-left: 350px;
 }
@@ -58,8 +86,11 @@ html, body {
   position: relative;
   left: 730px;
   top: -310px;
-}
+} */
 
+/* ==== PROJECTS ==== */
+
+/* PROJECT IMAGE */
 .project_image {
   display: grid;
   grid-gap: 4.0rem;
@@ -67,10 +98,15 @@ html, body {
   padding-left: 100px;
 }
 
+/* PROJECT TEXT */
 .text_container {
   width:600px;
-  position: relative;
-  left: 640px;
-  top: -850px;
+  margin-left: 40px;
+}
+
+.image_text_container{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
 }
 
